K8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fintrust-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: fintrust.local

    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: fintrust-frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fintrust-backend
            port:
              number: 8082
